[project]
name = "yolo-models-repo"
version = "0.1.0"
description = "Installable CLI for exporting Ultralytics YOLO models to ONNX."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "numpy>=2.4.2",
    "onnx>=1.20.1",
    "platformdirs>=4.5.0",
    "ultralytics>=8.4.14",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]

[project.scripts]
yolo-export-onnx = "yolo_exporter.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["yolo_exporter"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
